static files added

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -2,8 +2,8 @@
  <html>
 	<head>
 		<title>Home</title>
-			
-		<link rel="stylesheet" type="text/css" href="style.css">
+		{% load staticfiles %}
+		<link rel="stylesheet" type="{% static "text/css" %}" href="style.css">
 		<link rel="stylesheet" type="text/css" href="estilomenu.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 		<link href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
