Corrigido index.html

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -41,7 +41,7 @@
 		<div class="slideshow-container">
 			<div class="mySlides fade">
 				<div class="numbertext"></div>
-				<img src="{% statis 'img/estudantes.jpeg' %}" style="width:109%">
+				<img src="{% static 'img/estudantes.jpeg' %}" style="width:109%">
 				<div class="text"></div>
 			</div>
 
