Ajuste de views

--- a/main/templates/PortalAluno.html
+++ b/main/templates/PortalAluno.html
@@ -11,8 +11,8 @@
       <div id="menu">
         <h3 class="link-titulo">Secretaria</h3>
         <ul class="box">					
-          <li><a href="boletimA.html">Boletim</a></li>
-          <li><a href="calendario-geral.html">Calendário de Aulas</a></li>
+          <li><a href="boletim">Boletim</a></li>
+          <li><a href="calendario-geral">Calendário de Aulas</a></li>
           <li ><a href="horario-aulas.html">Horário das Aulas</a></li>
           <li ><a href="dadosA.html">Alterar Dados</a></li>
 
