--- a/main/templates/loginAluno.html
+++ b/main/templates/loginAluno.html
@@ -19,7 +19,7 @@
         <!-- <img class="profile-img-card" src="//lh3.googleusercontent.com/-6V8xOA6M7BA/AAAAAAAAAAI/AAAAAAAAAAA/rzlHcD0KYwo/photo.jpg?sz=120" alt="" /> -->
         <img id="profile-img" class="profile-img-card" src="{% static 'img/chapeu.jpg' %}"/>
         <p id="profile-name" class="profile-name-card"></p>
-        <form class="form-signin">
+        <form action="portalAluno" class="form-signin">
           <span id="reauth-ra" class="reauth-ra"></span>
           <input type="number" id="inputRa" class="form-control" placeholder="RA" required autofocus>
           <input type="password" id="inputPassword" class="form-control" placeholder="Senha" required>
