--- a/main/templates/PortalAluno.html
+++ b/main/templates/PortalAluno.html
@@ -11,10 +11,10 @@
       <div id="menu">
         <h3 class="link-titulo">Secretaria</h3>
         <ul class="box">					
-          <li><a href="boletim">Boletim</a></li>
-          <li><a href="calendario-geral">Calendário de Aulas</a></li>
+          <li><a href="portal/boletim">Boletim</a></li>
+          <li><a href="portal/calendario-geral">Calendário de Aulas</a></li>
           <li ><a href="horario-aulas.html">Horário das Aulas</a></li>
-          <li ><a href="dadosA.html">Alterar Dados</a></li>
+          <li ><a href="portal/dados/aluno">Alterar Dados</a></li>
 
         </ul>
         <h3 class="link-titulo">Financeiro</h3>
@@ -25,7 +25,7 @@
         <ul class="box">					
           <li><a href="AulasGravadas.html">Aulas Gravadas </a></li> 			
           <li><a href="entrega-trabalho.html">Entrega de Trabalhos</a></li> 		
-          <li><a href="entrega-atividades.html">Entrega de Atividades</a></li> 	
+          <li><a href="portal/entrega-atividades">Entrega de Atividades</a></li> 	
 
         </ul>
       </div> 
@@ -46,7 +46,7 @@
             </div>
           </div>
         </div>
-        <button class="botao-dados" type="submit"><a href="dadosA.html">Alterar Dados</a></button>
+        <button class="botao-dados" type="submit"><a href="portal/dados/aluno">Alterar Dados</a></button>
         <button class="botao-sair"><span><a href="index.html">Sair</a></span></button>
 
     </div>
