--- a/main/templates/PortalAluno.html
+++ b/main/templates/PortalAluno.html
@@ -13,18 +13,18 @@
         <ul class="box">					
           <li><a href="portal/boletim">Boletim</a></li>
           <li><a href="portal/calendario-geral">Calendário de Aulas</a></li>
-          <li ><a href="horario-aulas.html">Horário das Aulas</a></li>
+          <li ><a href="#">Horário das Aulas</a></li>
           <li ><a href="portal/dados/aluno">Alterar Dados</a></li>
 
         </ul>
         <h3 class="link-titulo">Financeiro</h3>
         <ul class="box">
-          <li><a href="pagamentos.html">Pagamentos</a></li>
+          <li><a href="#">Pagamentos</a></li>
         </ul>
         <h3 class="link-titulo">Acesso as Aulas</h3>
         <ul class="box">					
-          <li><a href="AulasGravadas.html">Aulas Gravadas </a></li> 			
-          <li><a href="entrega-trabalho.html">Entrega de Trabalhos</a></li> 		
+          <li><a href="portal/aulas-gravadas">Aulas Gravadas</a></li> 			
+          <li><a href="#">Entrega de Trabalhos</a></li> 		
           <li><a href="portal/entrega-atividades">Entrega de Atividades</a></li> 	
 
         </ul>
@@ -47,7 +47,7 @@
           </div>
         </div>
         <button class="botao-dados" type="submit"><a href="portal/dados/aluno">Alterar Dados</a></button>
-        <button class="botao-sair"><span><a href="index.html">Sair</a></span></button>
+        <button class="botao-sair"><span><a href="#">Sair</a></span></button>
 
     </div>
     <br><br><br>
