--- a/main/templates/PortalProfessor.html
+++ b/main/templates/PortalProfessor.html
@@ -17,20 +17,20 @@
       <div id="menu">
         <h3 class="link-titulo">Secretaria</h3>
         <ul class="box">					
-          <li><a href="lancarNotas.html">Boletim</a></li>
-          <li><a href="calendario-geral.html">Calendário de Aulas</a></li>
-          <li ><a href="horario-aulas.html">Horário das Aulas</a></li>
-          <li ><a href="dadosP.html">Alterar Dados</a></li>
+          <li><a href="portal/professor/notas">Boletim</a></li>
+          <li><a href="#">Calendário de Aulas</a></li>
+          <li ><a href="#">Horário das Aulas</a></li>
+          <li ><a href="portal/professor/dados">Alterar Dados</a></li>
         </ul>
         <h3 class="link-titulo">Financeiro</h3>
         <ul class="box">
-          <li><a href="pagamentos.html">Pagamentos</a></li>
+          <li><a href="#">Pagamentos</a></li>
         </ul>
         <h3 class="link-titulo">Acesso as Aulas</h3>
         <ul class="box">					
-          <li><a href="SubirAula.html">Subir Aula</a></li> 			
-          <li><a href="entrega-trabalhoP.html">Entrega de Trabalhos</a></li> 		
-          <li><a href="entrega-atividadesP.html">Entrega de Atividades</a></li> 	
+          <li><a href="portal/professor/subir-aula">Subir Aula</a></li> 			
+          <li><a href="#">Entrega de Trabalhos</a></li> 		
+          <li><a href="portal/entrega-atividades">Entrega de Atividades</a></li> 	
 
         </ul>
 
