--- a/main/templates/loginAluno.html
+++ b/main/templates/loginAluno.html
@@ -25,7 +25,7 @@
           <input type="password" id="inputPassword" class="form-control" placeholder="Senha" required>
           <div id="remember" class="checkbox">
             <label>
-              <input class="me-lembre" type="checkbox" value="remember-me"> Me lembre
+              <input class="me-lembre" type="checkbox" value="remember-me"> Me lembre</input>
             </label>
           </div>
           <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Entrar</button>
