--- a/main/templates/404.html
+++ b/main/templates/404.html
@@ -1,35 +1,23 @@
-
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Oppss | 404 não encontrado</title>
-		<link href="css/style.css" rel="stylesheet" type="text/css"  media="all" />
-	</head>
-	<body>
-		<!--start-wrap--->
-		<div class="wrap">
-			<!---start-header---->
-				<div class="header">
-					<div class="logo">
-						<h1><a href="#">Oppss</a></h1>
-					</div>
-				</div>
-			<!---End-header---->
-			<!--start-content------>
-			<div class="content">
-				<img src="images/error-img.png" title="error" />
-				<p><span><label>O</label>ppss.....</span> A página que você procura não está aqui!.</p>
-				<a href="portal">Voltar para a home</a>
-			</div>
-			<!--End-Cotent------>
-		</div>
-		<!--End-wrap--->
-	</body>
+  <head>
+    {% load staticfiles %}
+    <title>Oppss | 404 não encontrado</title>
+    <link href="{$ static 'css/style.css' %}" rel="stylesheet" type="text/css"  media="all" />
+  </head>
+  <body>
+    <div class="wrap">
+      <div class="header">
+        <div class="logo">
+          <h1><a href="#">Oppss</a></h1>
+        </div>
+      </div>
+      <div class="content">
+        <img src="{% static 'img/error-img.png' %}" title="error" />
+        <p><span><label>O</label>ppss.....</span> A página que você procura não está aqui!.</p>
+        <a href="portal">Voltar para a home</a>
+      </div>
+    </div>
+  </body>
 </html>
 
