--- a/main/templates/404.html
+++ b/main/templates/404.html
@@ -3,7 +3,7 @@
   <head>
     {% load staticfiles %}
     <title>Oppss | 404 não encontrado</title>
-    <link href="{$ static 'css/error.css' %}" rel="stylesheet" type="text/css"  media="all" />
+    <link href="{% static 'css/error.css' %}" rel="stylesheet" type="text/css"  media="all" />
   </head>
   <body>
     <div class="wrap">
