--- a/main/templates/404.html
+++ b/main/templates/404.html
@@ -15,7 +15,7 @@
       <div class="content">
         <img src="{% static 'img/error-img.png' %}" title="error" />
         <p><span><label>O</label>ppss.....</span> A página que você procura não está aqui!.</p>
-        <a href="portal">Voltar para a home</a>
+        <a href="../">Voltar para a home</a>
       </div>
     </div>
   </body>
