--- a/main/templates/PortalAluno.html
+++ b/main/templates/PortalAluno.html
@@ -11,10 +11,10 @@
       <div id="menu">
         <h3 class="link-titulo">Secretaria</h3>
         <ul class="box">					
-          <li><a href="portal/boletim">Boletim</a></li>
-          <li><a href="portal/calendario-geral">Calendário de Aulas</a></li>
+          <li><a href="boletim">Boletim</a></li>
+          <li><a href="calendario-geral">Calendário de Aulas</a></li>
           <li ><a href="#">Horário das Aulas</a></li>
-          <li ><a href="portal/dados/aluno">Alterar Dados</a></li>
+          <li ><a href="dados/aluno">Alterar Dados</a></li>
 
         </ul>
         <h3 class="link-titulo">Financeiro</h3>
@@ -23,9 +23,9 @@
         </ul>
         <h3 class="link-titulo">Acesso as Aulas</h3>
         <ul class="box">					
-          <li><a href="portal/aulas-gravadas">Aulas Gravadas</a></li> 			
+          <li><a href="aulas-gravadas">Aulas Gravadas</a></li> 			
           <li><a href="#">Entrega de Trabalhos</a></li> 		
-          <li><a href="portal/entrega-atividades">Entrega de Atividades</a></li> 	
+          <li><a href="entrega-atividades">Entrega de Atividades</a></li> 	
 
         </ul>
       </div> 
@@ -46,7 +46,7 @@
             </div>
           </div>
         </div>
-        <button class="botao-dados" type="submit"><a href="portal/dados/aluno">Alterar Dados</a></button>
+        <button class="botao-dados" type="submit"><a href="dados/aluno">Alterar Dados</a></button>
         <button class="botao-sair"><span><a href="#">Sair</a></span></button>
 
     </div>
