--- a/main/templates/PortalProfessor.html
+++ b/main/templates/PortalProfessor.html
@@ -17,10 +17,10 @@
       <div id="menu">
         <h3 class="link-titulo">Secretaria</h3>
         <ul class="box">					
-          <li><a href="portal/professor/notas">Boletim</a></li>
+          <li><a href="professor/notas">Boletim</a></li>
           <li><a href="#">Calendário de Aulas</a></li>
           <li ><a href="#">Horário das Aulas</a></li>
-          <li ><a href="portal/professor/dados">Alterar Dados</a></li>
+          <li ><a href="professor/dados">Alterar Dados</a></li>
         </ul>
         <h3 class="link-titulo">Financeiro</h3>
         <ul class="box">
@@ -28,9 +28,9 @@
         </ul>
         <h3 class="link-titulo">Acesso as Aulas</h3>
         <ul class="box">					
-          <li><a href="portal/professor/subir-aula">Subir Aula</a></li> 			
+          <li><a href="professor/subir-aula">Subir Aula</a></li> 			
           <li><a href="#">Entrega de Trabalhos</a></li> 		
-          <li><a href="portal/entrega-atividades">Entrega de Atividades</a></li> 	
+          <li><a href="entrega-atividades">Entrega de Atividades</a></li> 	
 
         </ul>
 
