--- a/main/templates/404.html
+++ b/main/templates/404.html
@@ -15,7 +15,7 @@
       <div class="content">
         <img src="{% static 'img/error-img.png' %}" title="error" />
         <p><span><label>O</label>ppss.....</span> A página que você procura não está aqui!</p>
-        <p>Mas estamos trabalhando para mudar isso.</p>
+        <p>...Mas estamos trabalhando para mudar isso.</p>
         <a href="http://royaltechschool.azurewebsites.net">Voltar para a home</a>
       </div>
     </div>
