--- a/main/templates/PortalAluno.html
+++ b/main/templates/PortalAluno.html
@@ -38,7 +38,7 @@
       <span><div class="DPessoaisA" id="LoginContent">
           <div class="row-fluid">
             <div class="span4">
-              <div class="p"><h6>Nome:</h6><p></p> <strong>Aluno</strong></div>
+              <div class="p"><h6>Nome:</h6><p>{{ username }}</p> <strong>Aluno</strong></div>
               <div class="p"><h6>RA:</h6><p></p> <strong>###### </strong></div>
             </div>
             <div class="span8">
