--- a/main/templates/loginAluno.html
+++ b/main/templates/loginAluno.html
@@ -19,20 +19,27 @@
         <!-- <img class="profile-img-card" src="//lh3.googleusercontent.com/-6V8xOA6M7BA/AAAAAAAAAAI/AAAAAAAAAAA/rzlHcD0KYwo/photo.jpg?sz=120" alt="" /> -->
         <img id="profile-img" class="profile-img-card" src="{% static 'img/chapeu.jpg' %}"/>
         <p id="profile-name" class="profile-name-card"></p>
-        <form action="portal" class="form-signin">
+        <form action="login" method="POST" class="form-signin">
+          {% for field in form %}
           <span id="reauth-ra" class="reauth-ra"></span>
-          <input type="number" id="inputRa" class="form-control" placeholder="RA" required autofocus>
-          <input type="password" id="inputPassword" class="form-control" placeholder="Senha" required>
+         <!-- <input type="number" id="inputRa" class="form-control" placeholder="RA" required autofocus> -->
+          {{ field.user_ra }}
+          <!-- <input type="password" id="inputPassword" class="form-control" placeholder="Senha" required> -->
+          {{ field.user_password }}
           <div id="remember" class="checkbox">
             <label>
               <input class="me-lembre" type="checkbox" value="remember-me"> Me lembre</input>
             </label>
           </div>
+          {% endfor %}
           <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Entrar</button>
         </form><!-- /form -->
         <a href="#" class="forgot-password">
           Esqueceu a senha?
         </a>
+        {% if trigger %}
+        <span style="color: red; margin: 0 auto;">{{ trigger }}</span>
+        {% endif %}
       </div><!-- /card-container -->
     </div><!-- /container -->
     <div id="footer" class="footer default" data-bind="css: { 'default': !backgroundLogoUrl() }"> 
