--- a/main/templates/loginAluno.html
+++ b/main/templates/loginAluno.html
@@ -20,18 +20,17 @@
         <img id="profile-img" class="profile-img-card" src="{% static 'img/chapeu.jpg' %}"/>
         <p id="profile-name" class="profile-name-card"></p>
         <form action="login" method="POST" class="form-signin">
-          {% for field in form %}
+          {% csrf_token %}
           <span id="reauth-ra" class="reauth-ra"></span>
          <!-- <input type="number" id="inputRa" class="form-control" placeholder="RA" required autofocus> -->
-          {{ field.user_ra }}
+          {{form.user_ra}}
           <!-- <input type="password" id="inputPassword" class="form-control" placeholder="Senha" required> -->
-          {{ field.user_password }}
+          {{form.user_password}}
           <div id="remember" class="checkbox">
             <label>
               <input class="me-lembre" type="checkbox" value="remember-me"> Me lembre</input>
             </label>
           </div>
-          {% endfor %}
           <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Entrar</button>
         </form><!-- /form -->
         <a href="#" class="forgot-password">
