--- a/main/templates/PortalAluno.html
+++ b/main/templates/PortalAluno.html
@@ -39,7 +39,7 @@
           <div class="row-fluid">
             <div class="span4">
               <div class="p"><h6>Nome:</h6><p>{{ username }}</p> <strong>Aluno</strong></div>
-              <div class="p"><h6>RA:</h6><p></p> <strong>###### </strong></div>
+              <div class="p"><h6>RA:</h6><p>{{ra}}</p> <strong>###### </strong></div>
             </div>
             <div class="span8">
               <div class="p"><h6>Curso:</h6><p></p> <strong>Matéria</strong></div>
@@ -56,23 +56,17 @@
         <center><h1>Mural de Recados<hr></h1></center>
         <div class="recado1">
           <h3>Notas</h3><br>
-          <h5>#########
-            <br>p####
-            #######m<br> ####
-            ###ao que<br> espamos ##
-            nos##ivo.</h5>
+          
         </div>
 
         <div class="recado2">
           <h3>Semana de Provas</h3><br>
-          <h5>P###ias coisas.</h5>
+          
         </div>
 
         <div class="recado3">
           <h3>Algo algo </h3><br>
-          <h5>No ##a
-            <strong>##ião </strong>para##ição
-            de novas##ssos cursos.</h5>
+          
         </div>
       </fieldset>
     </div>
