--- a/main/templates/PortalAluno.html
+++ b/main/templates/PortalAluno.html
@@ -39,7 +39,7 @@
           <div class="row-fluid">
             <div class="span4">
               <div class="p"><h6>Nome:</h6><p>{{ username }}</p> <strong>Aluno</strong></div>
-              <div class="p"><h6>RA:</h6><p>{{ra}}</p> <strong>###### </strong></div>
+              <div class="p"><h6>RA:</h6><p>{{ ra }}</p></div>
             </div>
             <div class="span8">
               <div class="p"><h6>Curso:</h6><p></p> <strong>Matéria</strong></div>
@@ -47,7 +47,7 @@
           </div>
         </div>
         <button class="botao-dados" type="submit"><a href="dados/aluno">Alterar Dados</a></button>
-        <button class="botao-sair"><span><a href="#">Sair</a></span></button>
+        <button class="botao-sair"><span><a href="logout">Sair</a></span></button>
 
     </div>
     <br><br><br>
