--- a/main/templates/loginAluno.html
+++ b/main/templates/loginAluno.html
@@ -23,9 +23,9 @@
           {% csrf_token %}
           <span id="reauth-ra" class="reauth-ra"></span>
          <!-- <input type="number" id="inputRa" class="form-control" placeholder="RA" required autofocus> -->
-          {{form.user_ra}}
+          {{form.usuario_ra}}
           <!-- <input type="password" id="inputPassword" class="form-control" placeholder="Senha" required> -->
-          {{form.user_password}}
+          {{form.usuario_password}}
           <div id="remember" class="checkbox">
             <label>
               <input class="me-lembre" type="checkbox" value="remember-me"> Me lembre</input>
