--- a/main/templates/AulasGravadas.html
+++ b/main/templates/AulasGravadas.html
@@ -11,29 +11,29 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   </head>
   <body>
-    <div id="lateral">
-      <div id="menu">
-        <h3 class="link-titulo">Secretaria</h3>
-        <ul class="box">					
-          <li><a href="boletimA.html">Boletim</a></li>
-          <li><a href="calendario-geral.html">Calendário de Aulas</a></li>
-          <li ><a href="horario-aulas.html">Horário das Aulas</a></li>
-          <li ><a href="dadosA.html">Alterar Dados</a></li>
-
-        </ul>
-        <h3 class="link-titulo">Financeiro</h3>
-        <ul class="box">
-          <li><a href="pagamentos.html">Pagamentos</a></li>
-        </ul>
-        <h3 class="link-titulo">Acesso as Aulas</h3>
-        <ul class="box">					
-          <li><a href="AulasGravadas.html">Aulas Gravadas </a></li> 			
-          <li><a href="entrega-trabalho.html">Entrega de Trabalhos</a></li> 		
-          <li><a href="entrega-atividades.html">Entrega de Atividades</a></li> 	
-
-        </ul>
-      </div> 
-    </div>
+      <div id="lateral">
+          <div id="menu">
+            <h3 class="link-titulo">Secretaria</h3>
+            <ul class="box">					
+              <li><a href="http://royaltechschool.azurewebsites.net/portal/boletim">Boletim</a></li>
+              <li><a href="http://royaltechschool.azurewebsites.net/portal/calendario-geral">Calendário de Aulas</a></li>
+              <li ><a href="#">Horário das Aulas</a></li>
+              <li ><a href="http://royaltechschool.azurewebsites.net/portal/dados/aluno">Alterar Dados</a></li>
+    
+            </ul>
+            <h3 class="link-titulo">Financeiro</h3>
+            <ul class="box">
+              <li><a href="#">Pagamentos</a></li>
+            </ul>
+            <h3 class="link-titulo">Acesso as Aulas</h3>
+            <ul class="box">					
+              <li><a href="http://royaltechschool.azurewebsites.net/portal/aulas-gravadas">Aulas Gravadas</a></li> 			
+              <li><a href="#">Entrega de Trabalhos</a></li> 		
+              <li><a href="http://royaltechschool.azurewebsites.net/portal/entrega-atividades">Entrega de Atividades</a></li> 	
+    
+            </ul>
+          </div> 
+        </div>
     <section id="subir-aula" class="content-section text-center">
       <div class="contact-section">
         <div class="container">
