--- a/main/templates/boletimA.html
+++ b/main/templates/boletimA.html
@@ -17,29 +17,29 @@
   </head>
   <body>
 
-    <div id="lateral">
-      <div id="menu">
-        <h3 class="link-titulo">Secretaria</h3>
-        <ul class="box">					
-          <li><a href="{% url 'Boletim' %}">Boletim</a></li>
-          <li><a href="{% url 'calendarioGeral' %}">Calendário de Aulas</a></li>
-          <li ><a href="horario-aulas.html">Horário das Aulas</a></li>
-          <li ><a href="{% url 'DadosAluno' %}">Alterar Dados</a></li>
-
-        </ul>
-        <h3 class="link-titulo">Financeiro</h3>
-        <ul class="box">
-          <li><a href="pagamentos.html">Pagamentos</a></li>
-        </ul>
-        <h3 class="link-titulo">Acesso as Aulas</h3>
-        <ul class="box">					
-          <li><a href="{% url 'aulasGravadas' %}">Aulas Gravadas </a></li> 			
-          <li><a href="entrega-trabalho.html">Entrega de Trabalhos</a></li> 		
-          <li><a href="{% url 'entregaAtividades' %}">Entrega de Atividades</a></li> 	
-
-        </ul>
-      </div> 
-    </div>
+      <div id="lateral">
+          <div id="menu">
+            <h3 class="link-titulo">Secretaria</h3>
+            <ul class="box">					
+              <li><a href="http://royaltechschool.azurewebsites.net/portal/boletim">Boletim</a></li>
+              <li><a href="http://royaltechschool.azurewebsites.net/portal/calendario-geral">Calendário de Aulas</a></li>
+              <li ><a href="#">Horário das Aulas</a></li>
+              <li ><a href="http://royaltechschool.azurewebsites.net/portal/dados/aluno">Alterar Dados</a></li>
+    
+            </ul>
+            <h3 class="link-titulo">Financeiro</h3>
+            <ul class="box">
+              <li><a href="#">Pagamentos</a></li>
+            </ul>
+            <h3 class="link-titulo">Acesso as Aulas</h3>
+            <ul class="box">					
+              <li><a href="http://royaltechschool.azurewebsites.net/portal/aulas-gravadas">Aulas Gravadas</a></li> 			
+              <li><a href="#">Entrega de Trabalhos</a></li> 		
+              <li><a href="http://royaltechschool.azurewebsites.net/portal/entrega-atividades">Entrega de Atividades</a></li> 	
+    
+            </ul>
+          </div> 
+        </div>
     <div class="base">
 
       <div class="row-fluid">
