--- a/main/templates/PortalAluno.html
+++ b/main/templates/PortalAluno.html
@@ -46,7 +46,7 @@
             </div>
           </div>
         </div>
-        <button class="botao-dados" type="submit"><a href="dados/aluno">Alterar Dados</a></button>
+        <button class="botao-dados" type="submit"><a href="http://royaltechschool.azurewebsites.net/portal/dados/aluno">Alterar Dados</a></button>
         <button class="botao-sair"><span><a href="logout">Sair</a></span></button>
 
     </div>
