--- a/main/templates/dadosA.html
+++ b/main/templates/dadosA.html
@@ -47,7 +47,8 @@
         <!--<input type="file">-->
 
         <br><br><br>
-        <form class="form-horizontal">
+        <form method= "POST" action="http://royaltechschool.azurewebsites.net/portal/dados/aluno/{{ra}}" class="form-horizontal">
+          {% csrf_token %}
           <fieldset>
             <legend>Dados pessoais</legend>
             <div class="control-group">
@@ -172,7 +173,7 @@
             </div>
 
             <div class="confirm-alteracao">
-              <a  href="PortalAluno.html" class="botao-salvar" id="salvar-alteracoes" href="javascript:void(0)">Salvar</a>
+              <button type="submit" class="botao-salvar" id="salvar-alteracoes">Salvar</button>
             </div>
           </fieldset>
         </form>
