--- a/main/templates/dadosA.html
+++ b/main/templates/dadosA.html
@@ -47,7 +47,7 @@
         <!--<input type="file">-->
 
         <br><br><br>
-        <form method= "POST" action="http://royaltechschool.azurewebsites.net/portal/dados/aluno/{{ra}}" class="form-horizontal">
+        <form method= "POST" action="" class="form-horizontal">
           {% csrf_token %}
           <fieldset>
             <legend>Dados pessoais</legend>
