--- a/main/templates/dadosA.html
+++ b/main/templates/dadosA.html
@@ -168,7 +168,7 @@
                 Senha:
               </label>
               <div class="controls">
-                <input type="password" class="input-xlarge" id="txtfield-senha" name="senha" value="" maxlength="10">		
+                {{% form.usuario_password %}}
               </div>
             </div>
 
