--- a/main/templates/dadosA.html
+++ b/main/templates/dadosA.html
@@ -168,7 +168,7 @@
                 Senha:
               </label>
               <div class="controls">
-                {{% form.usuario_password %}}
+                {{ form.usuario_password }}
               </div>
             </div>
 
