--- a/main/templates/AulasGravadas.html
+++ b/main/templates/AulasGravadas.html
@@ -14,7 +14,8 @@
       <div id="lateral">
           <div id="menu">
             <h3 class="link-titulo">Secretaria</h3>
-            <ul class="box">					
+            <ul class="box">
+              <li><a href="http://royaltechschool.azurewebsites.net/">Home</a></li>			
               <li><a href="http://royaltechschool.azurewebsites.net/portal/boletim">Boletim</a></li>
               <li><a href="http://royaltechschool.azurewebsites.net/portal/calendario-geral">Calendário de Aulas</a></li>
               <li ><a href="#">Horário das Aulas</a></li>
