Adicionado funcções do professor

--- a/main/templates/PortalProfessor.html
+++ b/main/templates/PortalProfessor.html
@@ -14,28 +14,29 @@
   <body background="{% static 'img/fundoportal.png' %}">
 
     <div id="lateral">
-      <div id="menu">
-        <h3 class="link-titulo">Secretaria</h3>
-        <ul class="box">					
-          <li><a href="professor/notas">Boletim</a></li>
-          <li><a href="#">Calendário de Aulas</a></li>
-          <li ><a href="#">Horário das Aulas</a></li>
-          <li ><a href="professor/dados">Alterar Dados</a></li>
-        </ul>
-        <h3 class="link-titulo">Financeiro</h3>
-        <ul class="box">
-          <li><a href="#">Pagamentos</a></li>
-        </ul>
-        <h3 class="link-titulo">Acesso as Aulas</h3>
-        <ul class="box">					
-          <li><a href="professor/subir-aula">Subir Aula</a></li> 			
-          <li><a href="#">Entrega de Trabalhos</a></li> 		
-          <li><a href="entrega-atividades">Entrega de Atividades</a></li> 	
-
-        </ul>
-
-      </div> 
-    </div>
+          <div id="menu">
+            <h3 class="link-titulo">Secretaria</h3>
+            <ul class="box">	
+                <li><a href="http://royaltechschool.azurewebsites.net/">Home</a></li>				
+              <li><a href="http://royaltechschool.azurewebsites.net/portal/boletim">Boletim</a></li>
+              <li><a href="http://royaltechschool.azurewebsites.net/portal/calendario-geral">Calendário de Aulas</a></li>
+              <li ><a href="#">Horário das Aulas</a></li>
+              <li ><a href="http://royaltechschool.azurewebsites.net/portal/dados/aluno">Alterar Dados</a></li>
+    
+            </ul>
+            <h3 class="link-titulo">Financeiro</h3>
+            <ul class="box">
+              <li><a href="#">Pagamentos</a></li>
+            </ul>
+            <h3 class="link-titulo">Acesso as Aulas</h3>
+            <ul class="box">					
+              <li><a href="http://royaltechschool.azurewebsites.net/portal/professor/subir-aula/">Subir Aula</a></li> 			
+              <li><a href="#">Entrega de Trabalhos</a></li> 		
+              <li><a href="http://royaltechschool.azurewebsites.net/portal/entrega-atividades">Entrega de Atividades</a></li> 	
+    
+            </ul>
+          </div> 
+        </div>
     <br><br>
     <div class="base">
 
