--- a/main/templates/PortalProfessor.html
+++ b/main/templates/PortalProfessor.html
@@ -46,8 +46,8 @@
       <span><div class="DPessoaisP" id="LoginContent">
           <div class="row-fluid">
             <div class="span4">
-              <div class="p"><h6>Nome:</h6><p></p> <strong>Professor</strong></div>
-              <div class="p"><h6>RA:</h6><p></p> <strong>###### </strong></div>
+              <div class="p"><h6>Nome:</h6><p></p> <strong>{{ username }}</strong></div>
+              <div class="p"><h6>RA:</h6><p></p> <strong> {{ ra }} </strong></div>
             </div>
             <div class="span8">
               <div class="p"><h6>Disciplina:</h6><p></p> <strong>Matéria</strong></div>
