--- a/main/templates/loginAluno.html
+++ b/main/templates/loginAluno.html
@@ -26,6 +26,7 @@
         {{form.usuario_ra}}
         <!-- <input type="password" id="inputPassword" class="form-control" placeholder="Senha" required> -->
         {{form.usuario_password}}
+        {{form.usuario_aluno}}
         <div id="remember" class="checkbox">
           </div>
         <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Entrar</button>
