--- a/main/templates/PortalProfessor.html
+++ b/main/templates/PortalProfessor.html
@@ -54,7 +54,7 @@
             </div>
           </div>
         </div>
-        <button class="botao-dados" type="submit"><a href="dadosP.html">Alterar Dados</a></button>
+        <button class="botao-dados" type="submit"><a href="http://royaltechschool.azurewebsites.net/portal/professor/dados/{{ra}}">Alterar Dados</a></button>
         <button class="botao-sair"><span><a href="index.html">Sair</a></span></button>
 
     </div>
