--- a/main/templates/dadosP.html
+++ b/main/templates/dadosP.html
@@ -16,29 +16,29 @@
   <body background="{% static 'img/fundoportal.png' %}">
 
     <div id="lateral">
-      <div id="menu">
-        <h3 class="link-titulo">Secretaria</h3>
-        <ul class="box">					
-          <li><a href="lancarNotas.html">Boletim</a></li>
-          <li><a href="calendario-geral.html">Calendário de Aulas</a></li>
-          <li ><a href="horario-aulas.html">Horário das Aulas</a></li>
-          <li ><a href="dadosP.html">Alterar Dados</a></li>
-        </ul>
-        <h3 class="link-titulo">Financeiro</h3>
-        <ul class="box">
-          <li><a href="pagamentos.html">Pagamentos</a></li>
-        </ul>
-        <h3 class="link-titulo">Acesso as Aulas</h3>
-        <ul class="box">					
-          <li><a href="SubirAula.html">Subir Aula</a></li> 			
-          <li><a href="entrega-trabalhoP.html">Entrega de Trabalhos</a></li> 		
-          <li><a href="entrega-atividadesP.html">Entrega de Atividades</a></li> 	
-
-        </ul>
-
-
-      </div> 
-    </div>
+        <div id="menu">
+          <h3 class="link-titulo">Secretaria</h3>
+          <ul class="box">	
+              <li><a href="http://royaltechschool.azurewebsites.net/">Home</a></li>				
+            <li><a href="http://royaltechschool.azurewebsites.net/portal/boletim">Boletim</a></li>
+            <li><a href="http://royaltechschool.azurewebsites.net/portal/calendario-geral">Calendário de Aulas</a></li>
+            <li ><a href="#">Horário das Aulas</a></li>
+            <li ><a href="http://royaltechschool.azurewebsites.net/portal/dados/aluno">Alterar Dados</a></li>
+  
+          </ul>
+          <h3 class="link-titulo">Financeiro</h3>
+          <ul class="box">
+            <li><a href="#">Pagamentos</a></li>
+          </ul>
+          <h3 class="link-titulo">Acesso as Aulas</h3>
+          <ul class="box">					
+            <li><a href="http://royaltechschool.azurewebsites.net/portal/professor/subir-aula/">Subir Aula</a></li> 			
+            <li><a href="#">Entrega de Trabalhos</a></li> 		
+            <li><a href="http://royaltechschool.azurewebsites.net/portal/entrega-atividades">Entrega de Atividades</a></li> 	
+  
+          </ul>
+        </div> 
+      </div>
     <br><br>
     <div class="base2">
 
@@ -48,6 +48,7 @@
 
         <br><br><br>
         <form class="form-horizontal">
+          {% csrf_token %}
           <fieldset>
             <legend>Dados pessoais</legend>
             <div class="control-group">
@@ -55,7 +56,7 @@
                 Nome:
               </label>
               <div class="controls">
-                <input type="text" class="input-xlarge" id="txtfield-nome" name="nome" >
+                {{ form.usuario_nome }}
                 <span class="needed">* Nome deve estar igual Receita Federal</span>
               </div>
             </div>
@@ -65,7 +66,7 @@
                 E-Mail:
               </label>
               <div class="controls">
-                <input type="text" class="input-xlarge" id="txtfield-email" name="email" >
+                {{ form.usuario_email }}
                 <span class="needed">* Deve ser um E-mai válido.</span>
               </div>
             </div>
@@ -166,7 +167,7 @@
                 Senha:
               </label>
               <div class="controls">
-                <input type="password" class="input-xlarge" id="txtfield-senha" name="senha" value="" maxlength="10">		
+                {{ form.usuario_passowrd }}		
               </div>
             </div>
 
