--- a/main/templates/PortalProfessor.html
+++ b/main/templates/PortalProfessor.html
@@ -55,7 +55,7 @@
           </div>
         </div>
         <button class="botao-dados" type="submit"><a href="http://royaltechschool.azurewebsites.net/portal/professor/dados/{{ra}}">Alterar Dados</a></button>
-        <button class="botao-sair"><span><a href="index.html">Sair</a></span></button>
+        <button class="botao-sair"><span><a href="http://royaltechschool.azurewebsites.net/logout">Sair</a></span></button>
 
     </div>
     <br><br><br>
