--- a/main/templates/PortalProfessor.html
+++ b/main/templates/PortalProfessor.html
@@ -22,6 +22,7 @@
               <li><a href="http://royaltechschool.azurewebsites.net/portal/calendario-geral">Calendário de Aulas</a></li>
               <li ><a href="#">Horário das Aulas</a></li>
               <li ><a href="http://royaltechschool.azurewebsites.net/portal/professor/dados/{{ra}}">Alterar Dados</a></li>
+              <li ><a href="http://royaltechschool.azurewebsites.net/portal/professor/criarAluno/">Criar Aluno</a></li>
     
             </ul>
             <h3 class="link-titulo">Financeiro</h3>
