Incrementação cadastro de aluno

--- a/main/templates/criarAluno.html
+++ b/main/templates/criarAluno.html
@@ -98,6 +98,14 @@
                 {{ form.usuario_sexo }}
               </div>
             </div>
+            <div class="control-group">
+                    <label id="label-telefone" class="control-label" for="telefone">
+                      Estado Civil:
+                    </label>
+                    <div class="controls">
+                      {{ form.usuario_estado_civil }}
+                    </div>
+                  </div>
 
             <div class="control-group">
               <label id="label-celular" class="control-label" for="celular">
