Incrementada visualização de alunos

--- a/main/templates/PortalProfessor.html
+++ b/main/templates/PortalProfessor.html
@@ -23,6 +23,7 @@
               <li ><a href="#">Horário das Aulas</a></li>
               <li ><a href="http://royaltechschool.azurewebsites.net/portal/professor/dados/{{ra}}">Alterar Dados</a></li>
               <li ><a href="http://royaltechschool.azurewebsites.net/portal/professor/criarAluno/">Criar Aluno</a></li>
+              <li ><a href="http://royaltechschool.azurewebsites.net/portal/professor/visualizar-alunos/">Visualizar Alunos</a></li>
     
             </ul>
             <h3 class="link-titulo">Financeiro</h3>
