Correção dos formularios de cadastro

--- a/main/templates/criarAluno.html
+++ b/main/templates/criarAluno.html
@@ -121,7 +121,7 @@
                 Curso:
               </label>
               <div class="controls">
-                {{ form.usuario_curso }}
+                {{ form.usuario_cursos }}
               </div>
             </div>
 
