--- a/main/templates/visualizar-alunos.html
+++ b/main/templates/visualizar-alunos.html
@@ -30,6 +30,8 @@
             padding: 10px;
             border-radius: 5px;
             color: #fff;
+            float: right;
+            margin-top: -10px;;
         }
         
         .alunos a:hover{
