--- a/main/templates/visualizar-alunos.html
+++ b/main/templates/visualizar-alunos.html
@@ -40,30 +40,32 @@
         </style></head>
         
       <body>
-          <div id="lateral">
-              <div id="menu">
-                <h3 class="link-titulo">Secretaria</h3>
-                <ul class="box">	
-                    <li><a href="http://royaltechschool.azurewebsites.net/">Home</a></li>					
-                  <li><a href="http://royaltechschool.azurewebsites.net/portal/boletim">Boletim</a></li>
-                  <li><a href="http://royaltechschool.azurewebsites.net/portal/calendario-geral">Calendário de Aulas</a></li>
-                  <li><a href="#">Horário das Aulas</a></li>
-                  <li><a href="http://royaltechschool.azurewebsites.net/portal/dados/aluno">Alterar Dados</a></li>
-        
-                </ul>
-                <h3 class="link-titulo">Financeiro</h3>
-                <ul class="box">
-                  <li><a href="#">Pagamentos</a></li>
-                </ul>
-                <h3 class="link-titulo">Acesso as Aulas</h3>
-                <ul class="box">					
-                  <li><a href="http://royaltechschool.azurewebsites.net/portal/aulas-gravadas">Aulas Gravadas</a></li> 			
-                  <li><a href="#">Entrega de Trabalhos</a></li> 		
-                  <li><a href="http://royaltechschool.azurewebsites.net/portal/entrega-atividades">Entrega de Atividades</a></li> 	
-        
-                </ul>
-              </div> 
-            </div>
+            <div id="lateral">
+                    <div id="menu">
+                      <h3 class="link-titulo">Secretaria</h3>
+                      <ul class="box">	
+                          <li><a href="http://royaltechschool.azurewebsites.net/">Home</a></li>				
+                        <li><a href="http://royaltechschool.azurewebsites.net/portal/boletim">Boletim</a></li>
+                        <li><a href="http://royaltechschool.azurewebsites.net/portal/calendario-geral">Calendário de Aulas</a></li>
+                        <li ><a href="#">Horário das Aulas</a></li>
+                        
+                        <li ><a href="http://royaltechschool.azurewebsites.net/portal/professor/criarAluno/">Criar Aluno</a></li>
+                        <li ><a href="http://royaltechschool.azurewebsites.net/portal/professor/visualizar-alunos/">Visualizar Alunos</a></li>
+              
+                      </ul>
+                      <h3 class="link-titulo">Financeiro</h3>
+                      <ul class="box">
+                        <li><a href="#">Pagamentos</a></li>
+                      </ul>
+                      <h3 class="link-titulo">Acesso as Aulas</h3>
+                      <ul class="box">					
+                        <li><a href="http://royaltechschool.azurewebsites.net/portal/professor/subir-aula/">Subir Aula</a></li> 			
+                        <li><a href="#">Entrega de Trabalhos</a></li> 		
+                        <li><a href="http://royaltechschool.azurewebsites.net/portal/entrega-atividades">Entrega de Atividades</a></li> 	
+              
+                      </ul>
+                    </div> 
+                  </div>
         <p>Usuários</p><hr class="hr-trabalho">
         <br>
           <div class="alunos" style="display: flex; width: 100%; margin-left: 10%; margin-top: 5%;">
