Correçoes no portal do aluno

--- a/main/templates/PortalAluno.html
+++ b/main/templates/PortalAluno.html
@@ -43,7 +43,7 @@
               <div class="p"><h6>RA:</h6><p>{{ ra }}</p></div>
             </div>
             <div class="span8">
-              <div class="p"><h6>Curso:</h6><p></p> <strong>Matéria</strong></div>
+              <div class="p"><h6>Curso:</h6><p></p> <strong>{{curso}}</strong></div>
             </div>
           </div>
         </div>
