--- a/main/templates/boletimA.html
+++ b/main/templates/boletimA.html
@@ -53,7 +53,7 @@
               <div class="p"><h6>RA:</h6><p></p> <strong>{{ ra }} </strong></div>
             </div>
             <div class="span8">
-              <div class="p"><h6>Curso:</h6><p></p> <strong>Matéria</strong></div>
+              <div class="p"><h6>Curso:</h6><p></p> <strong>{{curso}}</strong></div>
             </div>
           </div>
         </div>
