Ajustes nos links

--- a/main/templates/boletimA.html
+++ b/main/templates/boletimA.html
@@ -25,7 +25,7 @@
               <li><a href="http://royaltechschool.azurewebsites.net/portal/boletim">Boletim</a></li>
               <li><a href="http://royaltechschool.azurewebsites.net/portal/calendario-geral">Calendário de Aulas</a></li>
               <li ><a href="#">Horário das Aulas</a></li>
-              <li ><a href="http://royaltechschool.azurewebsites.net/portal/dados/aluno">Alterar Dados</a></li>
+              <li ><a href="http://royaltechschool.azurewebsites.net/portal/dados/aluno/{{ra}}">Alterar Dados</a></li>
     
             </ul>
             <h3 class="link-titulo">Financeiro</h3>
